@@ -16,6 +16,8 @@ git-annex (3.20120310) UNRELEASED; urgency=low
     adjusted as desired to tune the bloom filter.
   * status: Display about of memory used by bloom filter, and
     detect then it's too small for the number of keys in a repository.
+  * git-annex-shell: Runs hooks/annex-content after content is received
+    or dropped.
 
  -- Joey Hess <joeyh@debian.org>  Sat, 10 Mar 2012 14:03:22 -0400
 
